--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Carlos Agelvis",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
