--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "author": "Carlos Agelvis",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.4"
+    "mailtrap": "^4.2.0",
+    "mongoose": "^8.16.4",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/parser": "^8.38.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
