--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "mailtrap": "^4.2.0",
     "mongoose": "^8.16.4",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^6.9.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
