--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "nodemailer": "^6.9.4",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/parser": "^8.38.0",
+    "sequelize-cli": "^6.6.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
