--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "sourceMap": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "models/index.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
