--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "npx tsc",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only ./api/index.ts",
     "start": "node ./build/app.js"
   },
   "author": "Carlos Agelvis",
