--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "build": "npx tsc",
     "dev": "ts-node-dev --respawn --transpile-only ./api/index.ts",
-    "start": "node ./build/app.js"
+    "start": "node ./build/index.js"
   },
   "author": "Carlos Agelvis",
   "license": "ISC",
