--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "build": "npx tsc && node scripts/copy-public.js",
+    "build": "npx tsc",
     "dev": "ts-node-dev --respawn --transpile-only ./api/index.ts",
     "start": "node ./build/index.js"
   },
