--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.15.5",
     "@typescript-eslint/parser": "^8.38.0",
     "jest": "^30.0.5",
     "sequelize-cli": "^6.6.3",
