--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "express": "^5.1.0",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "nodemailer": "^6.9.4",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1",
     "typescript": "^5.8.3",
     "yup": "^1.6.1"
   },
@@ -32,6 +34,7 @@
     "@types/formidable": "^3.4.5",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.5",
